# Eendpoint-cloud

./: .gitignore
MC101-2005/: .dockerignore  .gitignore  D2 - Endpoint Security.xmind  README.md  docker-compose.yml  main.py
MC101-2005/Task1/: README.md  config.py  example.env.txt  main.py
MC101-2005/Task1/api/users/: UserDBModels.py
MC101-2005/Task1/utils/: constants.py  security.py
MC101-2005/Task2/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
MC101-2005/Task2/api/candidates/: CandidateDBModels.py
MC101-2005/Task2/api/votes/: VoteDBModels.py  VoteEndpoints.py
MC101-2005/Task2/utils/: constants.py  security.py
MC101-2005/Task3/: Dockerfile  README.md  config.py  docker-compose.yml  example.env.txt  main.py  pyproject.toml  requirements.txt
MC101-2005/Task3/api/candidates/: CandidateDBModels.py  CandidateEndpoints.py  CandidateSchemas.py
MC101-2005/Task3/api/users/: UserDBModels.py  UserEndpoints.py  UserSchemas.py
MC101-2005/Task3/api/votes/: VoteDBModels.py  VoteEndpoints.py
MC101-2005/Task3/utils/: constants.py  database.py  security.py
MC101-2005/Task4/: README.md  postman_scripts_examples.md
MC101-2005/api/candidates/: CandidateEndpoints.py  CandidateSchemas.py
MC101-2005/api/users/: UserEndpoints.py  UserSchemas.py
MC101-2005/api/votes/: VoteSchemas.py
